(lang dune 3.0)

(name tiny_httpd_moonpool)
(generate_opam_files true)
(source
 (github c-cube/tiny-httpd-moonpool))

(authors "Simon Cruanes")
(maintainers "Simon Cruanes")
(license MIT)

;(documentation https://url/to/documentation)

;(package
; (name tiny_httpd_moonpool)
; (synopsis "Tiny_httpd using moonpool to handle clients")
; (depends ocaml dune moonpool tiny_httpd yojson)
; (allow_empty) ; TODO remove
; (tags
;  (http pool ocaml5)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
